fix(ModalHeader): icon is not aligned with modal's title

--- a/src/components/Modal/ModalHeader/ModalHeader.module.scss
+++ b/src/components/Modal/ModalHeader/ModalHeader.module.scss
@@ -4,7 +4,6 @@
   margin-block-start: var(--spacing-medium);
 
   .icon {
-    vertical-align: middle;
     margin-right: var(--spacing-small);
   }
 
